[FIX] account_reports: prevent dates and figures from wrapping
Summary
-------
Currently, numbers and dates can be wrapped on reports.

Steps to reproduce
------------------
* create and confirm an invoice that has a line with a long label.
* print the partner ledger

followup to: 4ea06ced880969abdde0a44f97ce96273ca91df2

opw-3462774

closes odoo/enterprise#47544

X-original-commit: 413c64d741c10052a723bcb60c7f77bbb69bdda1

--- a/account_reports/static/src/scss/account_report_print.scss
+++ b/account_reports/static/src/scss/account_report_print.scss
@@ -100,6 +100,11 @@
         }
     }
 
+    .no_wrap {
+        word-break: keep-all !important;
+        white-space: nowrap;    
+    }
+
     .number{
         font-weight: normal !important;
         color: black !important;
